src/test/deca/etapeA/invalid/parser/parser_literal_float_0.deca
// Description:
//    test du parseur pour les litéraux flottants
//    vérifie la bonne formation du litéral
//
// Resultats:
// erreur syntaxique
// Ligne <9> : <syntaxError>

1223.123.423
